<!-- Master layout. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"/>

    <include
        layout="@layout/detail_today_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <LinearLayout
        android:id="@+id/detail_additional_pane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/detail_accent_pane_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
        android:paddingRight="@dimen/forecast_detail_horizontal_padding"
        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_humidity_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
                android:text="@string/humidity"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"/>

            <TextView
                android:id="@+id/detail_humidity_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                tools:text="38%"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_pressure_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
                android:text="@string/pressure"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"/>


            <TextView
                android:id="@+id/detail_pressure_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                tools:text="995 hPa"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_wind_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
                android:text="@string/wind"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"/>


            <TextView
                android:id="@+id/detail_wind_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                tools:text="4km/h NW"/>
        </LinearLayout>
    </LinearLayout>

    <ImageSwitcher
        android:id="@+id/imageSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"/>
</LinearLayout>